--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,3 @@
 <h1><%=@articles.title%></h1>
-<p><%= @articles.body %></p>
+<p><%= @articles.body %></p><br>
 <%=  link_to "<<Back to Articles List", articles_path %>
